# libtorch_packed_tauri

./: .gitignore  .prettierrc  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: cmd.rs  main.rs
