[package]
name = "tauri-react-example"
version = "0.1.2"
description = "A Tauri App"
authors = [ "you" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6"
zip-extensions = "0.6"
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.5.2", features = ["api-all"] }
rand = "0.8.5"
tch = "0.14.0"
[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
